<resources>
    <string name="app_name">Lab2Take2</string>
    <string name="sendDataButton">Review Movie</string>
    <string name="category">Category</string>
    <string name="nominee">Nominee</string>
    <string name="review">Review</string>
    <string name="film">Best Picture</string>
    <string name="actor">Best Actor</string>
    <string name="actress">Best Actress</string>
    <string name="editing">Film Editing</string>
    <string name="effects">Visual Effects</string>
    <string name="name">Name</string>
    <string name="url">URL</string>
    <string name="password">Password</string>
    <string name="background_color">Background Color</string>
    <string name="fontColor">Font Color</string>
    <string name="preferences">Preferences</string>
    <string name="addReview">Add Review</string>
    <string name="description">Description</string>
    <string name="addInfo">Additional Information</string>
    <string name="rating">Rating</string>
    <string name="viewReviews">View Reviews</string>
    <string name="addCategory">Add Category</string>
</resources>
