<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.dane.nait.dmit.lab2.AddReview">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Spinner
            android:id="@+id/addReviewCategorySpinner"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:entries="@string/category" />

        <EditText
            android:id="@+id/addReviewRatingEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/rating"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/addReviewDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/addReviewAddInfoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/addInfo"
            android:inputType="textShortMessage" />

        <EditText
            android:id="@+id/addReviewReviewEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/review"
            android:inputType="textShortMessage" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onAddReview"
            android:text="@string/addReview" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
